assets/style.css
::selection {
  background: #FF5E99;
}

header {
  -webkit-app-region: drag; 
  -webkit-user-select: none; 
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
}

body {
  font-size: 11pt;
  font-family: Inconsolata, monospace;
  color: white;
  background-color: black;
}

nav {
  background-color: white;
  width: 20%;
  overflow-y: auto;
  pointer-events: none;
}

.nav-group .btn {
    width: 100%;
}

.search-box {
  display: none;
}

.state-visible {
  display: block;
}

#HideBtn {
  position: fixed;
  left: 0px;
  width: 16.5%;
}

.electron-in-page-search-window {
  width: 300px;
  height: 36px;
  background-color: white;
  position: fixed;
  z-index: 999;
  bottom:0;
  right:0;
}

.electron-in-page-search-window.search-inactive {
  visibility: hidden;
}

.electron-in-page-search-window.search-active {
  visibility: visible;
}

#directory-container {
  background-color: green;
  height:20%;
  width:20%;
  float:right;
  position:relative;
}

#title-bar-btns {
  -webkit-app-region: no-drag;
  position: fixed;
  top: 0px;
  right: 6px;
  color: black;
}

#shell {
  display:true;
}

body .ui-autocomplete {
  background: black;
  color: white;
}

body .ui-autocomplete .ui-menu-item .ui-corner-all {
  background: black;
}

body .ui-autocomplete .ui-menu-item .ui-state-focus {
  background: black;
}

#output-container {
  clear: both;
  height:90%;
  width:100%;
  float:left;
  position: relative;
  overflow-x: auto;
}

#od-wrapper {
  overflow:auto;
}

/* Scrollbar styles */
::-webkit-scrollbar {
width: 12px;
height: 12px;
}

::-webkit-scrollbar-track {
border: 1px solid yellowgreen;
border-radius: 10px;
}

::-webkit-scrollbar-thumb {
background: yellowgreen;
border-radius: 10px;
}

.window-content {
  width: 100%;
  background-color: black;
}

.window {
  width: 100%;
}

#container {
  width: 100%;
  padding: .1em 1.5em 1em 1em;
}
.input-line {
  display: -webkit-box;
  -webkit-box-orient: horizontal;
  -webkit-box-align: stretch;
  display: -moz-box;
  -moz-box-orient: horizontal;
  -moz-box-align: stretch;
  display: box;
  box-orient: horizontal;
  box-align: stretch;
  clear: both;
}
.input-line > div:nth-child(2) {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  box-flex: 1;
}
.prompt {
  white-space: nowrap;
  color: #96b38a;
  margin-right: 7px;
  display: -webkit-box;
  -webkit-box-pack: center;
  -webkit-box-orient: vertical;
  display: -moz-box;
  -moz-box-pack: center;
  -moz-box-orient: vertical;
  display: box;
  box-pack: center;
  box-orient: vertical;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.cmdline {
  outline: none;
  background-color: transparent;
  margin: 0;
  width: 100%;
  font: inherit;
  border: none;
  color: inherit;
}
.ls-files {
  height: 45px;
  -webkit-column-width: 100px;
  -moz-column-width: 100px;
  -o-column-width: 100px;
  column-width: 100px;
}

